--- a/exercicios_react/package.json
+++ b/exercicios_react/package.json
@@ -12,6 +12,7 @@
   "devDependencies": {
     "babel-core": "^6.22.1",
     "babel-loader": "^6.2.10",
+    "babel-plugin-transform-object-rest-spread": "^6.22.0",
     "babel-preset-es2015": "^6.22.0",
     "babel-preset-react": "^6.22.0",
     "react": "^15.4.2",
@@ -20,8 +21,5 @@
     "redux": "^3.6.0",
     "webpack": "^1.14.0",
     "webpack-dev-server": "^1.16.2"
-  },
-  "dependencies": {
-    "npm": "^6.4.0"
   }
 }
